@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.15 2002/09/04 01:26:43 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.16 2002/09/04 01:51:35 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1297,3 +1297,8 @@ lib/libc/net/res_mkquery.c			1.22
   correct bad practice in the code - it uses two changing variables
   to manage buffer (buf and buflen).  we eliminate buflen and use
   fixed point (ep) as the ending pointer.
+
+usr.sbin/pppd/pppd/tty.c			1.3
+  don't try to chmod if fchmod fails when restoring the original tty modes.
+  It could cause a symlink race. Just report the fchmod failure. Reported
+  by itojun, found in FreeBSD.
